Refactor index.html structure and content for clarity and completeness

--- a/index.html
+++ b/index.html
@@ -7,20 +7,53 @@
 </head>
 <body>
     <header>
-        <h1>
-
-        </h1>
+        <h1>Torinoi Zarándoklat</h1>
         <nav>
-
+            <a href="index.html">kezdőlap</a>
+            <a href="barni.html">Margit Mama</a>
+            <a href="mira.html">Aviglianai tavak</a>
+            <a href="simon.html">Szaléziak Magyarországon</a>
+            <a href="viki.html">Tanárjaink</a>
         </nav>
     </header>
     <main>
         <body>
-            
+            <article class="cards">
+                <div class="card">
+                    <h3></h3>
+                    <div class="tartalom">
+                        <p></p>
+                        <img src="" alt="">
+                    </div>
+                </div>
+                <div class="card">
+                    <h3></h3>
+                    <div class="tartalom">
+                        <p></p>
+                        <img src="" alt="">
+                    </div>
+                </div>
+            </article>  
         </body>
     </main>
     <footer>
-        
+        <p>Készítette: Ivády Barnabás, Bíró Viktória, Albert Simon, András Mira</p>
+        <div class="info">
+            <div class="elerhetoseg">
+                <p>Elérhetőségeink:</p>
+                <a href=""></a>
+                <a href=""></a>
+                <a href=""></a>
+                <a href=""></a>
+            </div>
+            <div class="sponsor">
+                <p>Szponzoraink:</p>
+                <a href=""></a>
+                <a href=""></a>
+                <a href=""></a>
+                <a href=""></a>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
