--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <a href="viki.html">Tanárjaink</a>
         </nav>
     </header>
-    <main>
-        <body>
+    <body>
+        <main>
             <article class="cards">
                 <div class="card">
                     <h3></h3>
@@ -34,24 +34,26 @@
                     </div>
                 </div>
             </article>  
-        </body>
-    </main>
+        </main>
+    </body>
     <footer>
         <p>Készítette: Ivády Barnabás, Bíró Viktória, Albert Simon, András Mira</p>
-        <div class="info">
-            <div class="elerhetoseg">
+        <div class="footer-content">
+            <div class="links">
                 <p>Elérhetőségeink:</p>
-                <a href=""></a>
-                <a href=""></a>
-                <a href=""></a>
-                <a href=""></a>
+                <a href="https://www.instagram.com/szamalkszalezi/">Instagram</a>
+                <a href="https://www.facebook.com/SZAMALK.szalezi.tech.szgi">Facebook</a>
+                <a href="https://www.youtube.com/@szamalk-szalezitechnikumes4016">Youtube</a>
+                <a href="https://www.szamalk-szalezi.hu/">Weboldalunk</a>
+                <a href="https://www.tiktok.com/@szamalkszalezi?_t=8XXoVu85TQj&_r=1">TikTok</a>
             </div>
-            <div class="sponsor">
-                <p>Szponzoraink:</p>
-                <a href=""></a>
-                <a href=""></a>
-                <a href=""></a>
-                <a href=""></a>
+            <div class="img">
+                <p></p>
+                <img src="kepek/footer/Instagram_icon.png" alt="instagram">
+                <img src="kepek/footer/Facebook_Logo_(2019).png" alt="facebook">
+                <img src="kepek/footer/youtube-icon-free-png.png" alt="youtube">
+                <img src="kepek/footer/unnamed.jpg" alt="weboldalunk">
+                <img src="kepek/footer/tiktok-icon-free-png.png" alt="tiktok">
             </div>
         </div>
     </footer>
