--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Torino, zarándoklat, szaléziak, kirándulás">
+    <meta name="author" content="Ivády Barnabás, Bíró Viktória, Albert Simon, András Mira">
+    <meta name="description" content="Torinoi Zarándoklat oldal">
+    <link rel="stylesheet" href="icon.png">
+    <link rel="stylesheet" href="styles.css">
     <title>Torinoi Zarándoklat</title>
 </head>
 <body>
@@ -18,26 +23,62 @@
     </header>
     <body>
         <main>
-            <article class="cards">
+            <section class="cards">
+                <h2>Miért mentünk Torinóba?</h2>
                 <div class="card">
-                    <h3></h3>
+                    <div class="tartalom">
+                        <p></p>
+                        <img src="kepek/" alt="">
+                    </div>
+                </div>
+                <h2>Kik rendezték a kirándulást?</h2>
+                <div class="card">
                     <div class="tartalom">
                         <p></p>
                         <img src="" alt="">
                     </div>
-                </div>
-                <div class="card">
-                    <h3></h3>
                     <div class="tartalom">
                         <p></p>
                         <img src="" alt="">
                     </div>
+                </div>                
+            </section>
+
+            <section>
+                <h2>Vélemények a kirándulásról:</h2>
+                <div class="comments">
+                    <div class="comment_card">
+                        <h3>A.S.</h3>
+                        <p></p>
+                    </div>
+                    <div class="comment_card">
+                        <h3>A.M.</h3>
+                        <p></p>
+                    </div>
+                    <div class="comment_card">
+                        <h3>B.V.</h3>
+                        <p></p>
+                    </div>
+                    <div class="comment_card">
+                        <h3>I.B.</h3>
+                        <p></p>
+                    </div>
+                    <div class="comment_card">
+                        <h3>J.ZS.</h3>
+                        <p></p>
+                    </div>
                 </div>
-            </article>  
+            </section>
         </main>
     </body>
     <footer>
-        <p>Készítette: Ivády Barnabás, Bíró Viktória, Albert Simon, András Mira</p>
+        <div class="credit">
+            <h3>Készítette:</h3>
+                <p>Ivády Barnabás</p>
+                <p>Bíró Viktória</p>
+                <p>Albert Simon</p>
+                <p>András Mira</p>
+        </div>
         <div class="footer-content">
             <div class="links">
                 <p>Elérhetőségeink:</p>
