--- a/mira.html
+++ b/mira.html
@@ -28,7 +28,7 @@
       </nav>
     </header>
     <main>
-      <h2></h2>
+      <h2>Aviglianai tavak</h2>
       <section class="cards">
         <div class="card">
             <h2></h2>
