--- a/index.html
+++ b/index.html
@@ -49,23 +49,23 @@
                 <div class="comments">
                     <div class="comment_card">
                         <h3>A.S.</h3>
-                        <p></p>
+                        <p>Jól éreztem magam.</p>
                     </div>
                     <div class="comment_card">
                         <h3>A.M.</h3>
-                        <p></p>
+                        <p>Nagyon szép volt a tenger.</p>
                     </div>
                     <div class="comment_card">
                         <h3>B.V.</h3>
-                        <p></p>
+                        <p>Máskor is el akarok jönni!</p>
                     </div>
                     <div class="comment_card">
                         <h3>I.B.</h3>
-                        <p></p>
+                        <p>Emlékezetes volt.</p>
                     </div>
                     <div class="comment_card">
                         <h3>J.ZS.</h3>
-                        <p></p>
+                        <p>Jó VÓT :)</p>
                     </div>
                 </div>
             </section>
