--- a/barni.html
+++ b/barni.html
@@ -28,24 +28,26 @@
       </nav>
     </header>
     <main>
-      <h2>Margit Mama</h2>
-      <section class="cards">
-        <div class="card">
-            <h2>Margit Mama Élete</h2>
-            <div class="tartalom">
-                <p>Occhiena Margit, akit a Szalézi Család egyszerűen csak Margit mamaként emleget, 1788. április 1-jén született Torinó közelében, és 1856. november 25-én hunyt el Capriglióban. Három gyermek édesanyja volt: Antal, József és a legfiatalabb, János, akit a világ Bosco Szent Jánosként ismert meg. Férjét korán elvesztette, így egyedül, nehéz körülmények között kellett felnevelnie fiait. Élete egyszerűnek tűnt, de rendkívüli volt: hitéből és kitartásából olyan erő fakadt, amely családját összetartotta, és fiát egész életére inspirálta.</p>
-                <img src="kepek/margit1.png" alt="margit1" />
-            </div>
-        </div>
+      <article>
+        <h2>Margit Mama</h2>
+        <section class="cards">
+          <div class="card">
+              <h2>Margit Mama Élete</h2>
+              <div class="tartalom">
+                  <p>Occhiena Margit, akit a Szalézi Család egyszerűen csak Margit mamaként emleget, 1788. április 1-jén született Torinó közelében, és 1856. november 25-én hunyt el Capriglióban. Három gyermek édesanyja volt: Antal, József és a legfiatalabb, János, akit a világ Bosco Szent Jánosként ismert meg. Férjét korán elvesztette, így egyedül, nehéz körülmények között kellett felnevelnie fiait. Élete egyszerűnek tűnt, de rendkívüli volt: hitéből és kitartásából olyan erő fakadt, amely családját összetartotta, és fiát egész életére inspirálta.</p>
+                  <img src="kepek/margit1.png" alt="margit1" />
+              </div>
+          </div>
 
-        <div class="card">
-            <h2>Margit Mamáról</h2>
-            <div class="tartalom">
-                <p>Nemcsak édesanya volt, hanem nevelő, tanító, és a mindennapokban példát mutató keresztény asszony. Amikor János papként elindította az oratóriumi munkát, Margit mellette állt, segített a fiatalok befogadásában és gondozásában. Életével közvetítette azt a légkört, amelyből később a Szalézi Család szellemisége sarjadt. Ezért nevezhetjük őt a Szaléziak anyjának, hiszen életszentsége nem a rendkívüli tettekben, hanem az apró, mindennapi helytállásban mutatkozott meg.</p>
-                <img src="kepek/margit2.png" alt="margit2" />
-            </div>
-        </div>
-      </section>
+          <div class="card">
+              <h2>Margit Mamáról</h2>
+              <div class="tartalom">
+                  <p>Nemcsak édesanya volt, hanem nevelő, tanító, és a mindennapokban példát mutató keresztény asszony. Amikor János papként elindította az oratóriumi munkát, Margit mellette állt, segített a fiatalok befogadásában és gondozásában. Életével közvetítette azt a légkört, amelyből később a Szalézi Család szellemisége sarjadt. Ezért nevezhetjük őt a Szaléziak anyjának, hiszen életszentsége nem a rendkívüli tettekben, hanem az apró, mindennapi helytállásban mutatkozott meg.</p>
+                  <img src="kepek/margit2.png" alt="margit2" />
+              </div>
+          </div>
+        </section>
+      </article>
     </main>
     <footer>
       <div class="credit">
