--- a/index.html
+++ b/index.html
@@ -14,87 +14,73 @@
     <header>
         <h1>Torinoi Zarándoklat</h1>
         <nav>
-            <a href="index.html">kezdőlap</a>
+            <a href="index.html">Kezdőlap</a>
             <a href="barni.html">Margit Mama</a>
             <a href="mira.html">Aviglianai tavak</a>
             <a href="simon.html">Szaléziak Magyarországon</a>
             <a href="viki.html">Tanárjaink</a>
         </nav>
     </header>
-    <body>
         <main>
-            <section class="cards">
-                <h2>Miért mentünk Torinóba?</h2>
-                <div class="card">
-                    <div class="tartalom">
-                        <p></p>
-                        <img src="kepek/" alt="">
+            <article>
+                <section class="cards">
+                    <div class="card">
+                        <div class="tartalom">
+                            <h2>Miért mentünk Torinóba?</h2>
+                            <p>Osztályunk Torinoba a múlt megismerése miatt indúlt, hogy mégjobban tályékozódottak legyünk Don-Bosco életének különböző helyszíneivel és állomásaival.</p>
+                            <img src="kepek/torino1.png" alt="">
+                        </div>
                     </div>
-                </div>
-                <h2>Kik rendezték a kirándulást?</h2>
-                <div class="card">
-                    <div class="tartalom">
-                        <p></p>
-                        <img src="" alt="">
+                    <div class="card">
+                        <div class="tartalom">
+                            <h2>Kik rendezték a kirándulást?</h2>
+                            <p>A torinói zarándoklatot A fenntartó támogatta és Kovács Sándor atya SDB szervezte. Sokan támogatták a megvalósulást munkájukkal: Szarka Adrienn gazdasági vezető, Halász József igazgató Úr, Koblencz Máté igazgató helyettes Úr, a vezetőség összes tagja, Rózsás Adrienn osztályfőnök, Tarczaliné Szabó Ágnes tanárnő osztályfőnök helyettes, Kirner Gábor testvér. Sokan segítettek a logisztikában, szállítmányozásban az iskola munkatársai közül is és szalézi testvérek és atyák és munkatársak is.</p>
+                            <img src="kepek" alt="">
+                        </div>
+                    </div>                
+                </section>
+                    <h2>Vélemények a kirándulásról:</h2>
+                <section>
+                    <div class="comments">
+                        <div class="comment_card">
+                            <h3>A.S.</h3>
+                            <p>Jól éreztem magam.</p>
+                        </div>
+                        <div class="comment_card">
+                            <h3>A.M.</h3>
+                            <p>Nagyon szép volt a tenger.</p>
+                        </div>
+                        <div class="comment_card">
+                            <h3>B.V.</h3>
+                            <p>Máskor is el akarok jönni!</p>
+                        </div>
+                        <div class="comment_card">
+                            <h3>I.B.</h3>
+                            <p>Emlékezetes volt.</p>
+                        </div>
+                        <div class="comment_card">
+                            <h3>J.ZS.</h3>
+                            <p>Jó VÓT :)</p>
+                        </div>
                     </div>
-                    <div class="tartalom">
-                        <p></p>
-                        <img src="" alt="">
-                    </div>
-                </div>                
-            </section>
-
-            <section>
-                <h2>Vélemények a kirándulásról:</h2>
-                <div class="comments">
-                    <div class="comment_card">
-                        <h3>A.S.</h3>
-                        <p>Jól éreztem magam.</p>
-                    </div>
-                    <div class="comment_card">
-                        <h3>A.M.</h3>
-                        <p>Nagyon szép volt a tenger.</p>
-                    </div>
-                    <div class="comment_card">
-                        <h3>B.V.</h3>
-                        <p>Máskor is el akarok jönni!</p>
-                    </div>
-                    <div class="comment_card">
-                        <h3>I.B.</h3>
-                        <p>Emlékezetes volt.</p>
-                    </div>
-                    <div class="comment_card">
-                        <h3>J.ZS.</h3>
-                        <p>Jó VÓT :)</p>
-                    </div>
-                </div>
-            </section>
+                </section>
+            </article>
         </main>
-    </body>
     <footer>
-        <div class="credit">
-            <h3>Készítette:</h3>
-                <p>Ivády Barnabás</p>
-                <p>Bíró Viktória</p>
-                <p>Albert Simon</p>
-                <p>András Mira</p>
-        </div>
         <div class="footer-content">
-            <div class="links">
-                <p>Elérhetőségeink:</p>
-                <a href="https://www.instagram.com/szamalkszalezi/">Instagram</a>
-                <a href="https://www.facebook.com/SZAMALK.szalezi.tech.szgi">Facebook</a>
-                <a href="https://www.youtube.com/@szamalk-szalezitechnikumes4016">Youtube</a>
-                <a href="https://www.szamalk-szalezi.hu/">Weboldalunk</a>
-                <a href="https://www.tiktok.com/@szamalkszalezi?_t=8XXoVu85TQj&_r=1">TikTok</a>
-            </div>
-            <div class="img">
-                <p></p>
-                <img src="kepek/footer/Instagram_icon.png" alt="instagram">
-                <img src="kepek/footer/Facebook_Logo_(2019).png" alt="facebook">
-                <img src="kepek/footer/youtube-icon-free-png.png" alt="youtube">
-                <img src="kepek/footer/unnamed.jpg" alt="weboldalunk">
-                <img src="kepek/footer/tiktok-icon-free-png.png" alt="tiktok">
+            <div class="credit">
+                <h3>Készítette:</h3>
+                    <p>Ivády Barnabás</p>
+                    <p>Bíró Viktória</p>
+                    <p>Albert Simon</p>
+                    <p>András Mira</p>
+            </div>  
+            <div class="links">         
+                <a href="https://www.instagram.com/szamalkszalezi/"><img src="kepek/footer/Instagram_icon.png" alt="">Instagram</a>
+                <a href="https://www.facebook.com/SZAMALK.szalezi.tech.szgi"><img src="kepek/footer/Facebook_Logo_(2019).png" alt="">Facebook</a>
+                <a href="https://www.youtube.com/@szamalk-szalezitechnikumes4016"><img src="kepek/footer/youtube-icon-free-png.png" alt="">Youtube</a>
+                <a href="https://www.tiktok.com/@szamalkszalezi?_t=8XXoVu85TQj&_r=1"><img src="kepek/footer/tiktok-icon-free-png.png" alt="">TikTok</a>
+                <a href="https://www.szamalk-szalezi.hu/"><img src="kepek/footer/unnamed.jpg" alt=""> Weboldalunk</a>
             </div>
         </div>
     </footer>
