--- a/simon.html
+++ b/simon.html
@@ -28,23 +28,25 @@
       </nav>
     </header>
     <main>
-      <h2>Szaléziak Magyarországon</h2>
-      <section class="cards">
-        <div class="card">
-            <h2>Hit, tanítás, közösség</h2>
-          <div class="tartalom">
-            <p>A Szalézi rend több mint száz éve működik Magyarországon, hogy fiatalok életét formálja, értékeket közvetítsen és jövőt építsen. Küldetésünk, hogy szeretetteljes, támogató közösséget teremtsünk, ahol minden fiatal esélyt kap a fejlődésre.</p>
-            <img src="kepek/" alt="" />
+      <article>
+        <h2>Szaléziak Magyarországon</h2>
+        <section class="cards">
+          <div class="card">
+              <h2>Hit, tanítás, közösség</h2>
+            <div class="tartalom">
+              <p>A Szalézi rend több mint száz éve működik Magyarországon, hogy fiatalok életét formálja, értékeket közvetítsen és jövőt építsen. Küldetésünk, hogy szeretetteljes, támogató közösséget teremtsünk, ahol minden fiatal esélyt kap a fejlődésre.</p>
+              <img src="kepek/" alt="" />
+            </div>
           </div>
-        </div>
-        <div class="card">
-            <h2>Szaléziakról</h2>
-          <div class="tartalom">
-            <p>A Szaléziak a fiatalok szolgálatára szentelt katolikus szerzetesrend, melyet Szent János Bosco alapított. Magyarországon is számos oktatási intézményt, ifjúsági klubot és szociális programot működtetünk, amelyek segítségével lehetőséget biztosítunk a fejlődésre, tanulásra és közösségi életre.</p>
-            <img src="" alt="" />
+          <div class="card">
+              <h2>Szaléziakról</h2>
+            <div class="tartalom">
+              <p>A Szaléziak a fiatalok szolgálatára szentelt katolikus szerzetesrend, melyet Szent János Bosco alapított. Magyarországon is számos oktatási intézményt, ifjúsági klubot és szociális programot működtetünk, amelyek segítségével lehetőséget biztosítunk a fejlődésre, tanulásra és közösségi életre.</p>
+              <img src="" alt="" />
+            </div>
           </div>
-        </div>
-      </section>
+        </section>
+      </article>
     </main>
     <footer>
       <div class="credit">
