--- a/viki.html
+++ b/viki.html
@@ -28,27 +28,39 @@
       </nav>
     </header>
     <main>
-      <h2></h2>
-      <section class="cards">
-        <div class="card">
-          <h2></h2>
-          <div class="tartalom">
-            <p></p>
-            <img src="kepek/" alt="" />
+      <article>
+        <h2>Tanárjaink</h2>
+        <section class="cards">
+          <div class="card">
+            <h2></h2>
+            <div class="tartalom">
+              <p></p>
+              <img src="kepek/" alt="" />
+            </div>
           </div>
-        </div>
-        <div class="card">
-          <h2></h2>
-          <div class="tartalom">
-            <p></p>
-            <img src="" alt="" />
+          <div class="card">
+            <h2></h2>
+            <div class="tartalom">
+              <p></p>
+              <img src="" alt="" />
+            </div>
           </div>
-          <div class="tartalom">
-            <p></p>
-            <img src="" alt="" />
+          <div class="card">
+            <h2></h2>
+            <div class="tartalom">
+              <p></p>
+              <img src="" alt="" />
+            </div>
           </div>
-        </div>
-      </section>
+          <div class="card">
+            <h2></h2>
+            <div class="tartalom">
+              <p></p>
+              <img src="" alt="" />
+            </div>
+          </div>
+        </section>
+      </article>
     </main>
     <footer>
       <div class="credit">
