--- a/viki.html
+++ b/viki.html
@@ -32,16 +32,30 @@
         <h2>Tanárjaink</h2>
         <section class="cards">
           <div class="card">
-            <h2></h2>
+            <h2>Rózsás Adrienn</h2>
             <div class="tartalom">
-              <p></p>
+              <p>Rózsás Adrienn a számalkos tizedikeseknek az osztályfőnöke, strukturált, egyértelmű órákat tart. Mindig egyértelmű a feladat, nyugodtan lehet kérdezni és szívesen segít a tanárnő. </p>
               <img src="kepek/" alt="" />
             </div>
           </div>
           <div class="card">
-            <h2></h2>
+            <h2>Cséfalvaj Katalin</h2>
             <div class="tartalom">
-              <p></p>
+              <p>Sok diák kedvence a tanárnő, mindig érthető módon fogalmaz és tanít. Igyekszik személyesen foglalkozni minden diákkal.</p>
+              <img src="kepek/" alt="" />
+            </div>
+          </div>
+          <div class="card">
+            <h2>Olajos Zsolt</h2>
+            <div class="tartalom">
+              <p>Olajos Zsolt nagyon érthetően magyaráz, és mindig segít, ha valami nem megy elsőre. Diákként jó érzés, hogy türelmes és valóban azt szeretné, hogy sikerüljön minden.</p>
+              <img src="kepek/" alt="" />
+            </div>
+          </div>
+          <div class="card">
+            <h2>Tarczaliné Szabó Ágnes Emília </h2>
+            <div class="tartalom">
+              <p>Tarczaliné Szabó Ágnes Emília mindig odafigyel ránk, és igyekszik úgy elmagyarázni a tananyagot, hogy mindenki megértse. Diákként nagyon motiváló, hogy támogat és biztat, amikor szükségünk van rá.</p>
               <img src="" alt="" />
             </div>
           </div>
