--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <h1>Torinoi Zarándoklat</h1>
+        <h1>TORINOI ZARÁNDOKLAT</h1>
         <nav>
             <a href="index.html">Kezdőlap</a>
             <a href="barni.html">Margit Mama</a>
@@ -34,8 +34,8 @@
                     <div class="card">
                         <div class="tartalom">
                             <h2>Kik rendezték a kirándulást?</h2>
-                            <p>A torinói zarándoklatot A fenntartó támogatta és Kovács Sándor atya SDB szervezte. Sokan támogatták a megvalósulást munkájukkal: Szarka Adrienn gazdasági vezető, Halász József igazgató Úr, Koblencz Máté igazgató helyettes Úr, a vezetőség összes tagja, Rózsás Adrienn osztályfőnök, Tarczaliné Szabó Ágnes tanárnő osztályfőnök helyettes, Kirner Gábor testvér. Sokan segítettek a logisztikában, szállítmányozásban az iskola munkatársai közül is és szalézi testvérek és atyák és munkatársak is.</p>
-                            <img src="kepek" alt="">
+                            <p>Támogatók:Kovács Sándor, Szarka Adrienn, Halász József igazgató, Koblencz Máté igazgató helyettes, a vezetőség összes tagja, Rózsás Adrienn osztályfőnök, Tarczaliné Szabó Ágnes ofő helyettes, Kirner Gábor testvér.</p>
+                            <img src="kepek/photo-1502113130129-259236d6fabd.jpg" alt="">
                         </div>
                     </div>                
                 </section>
