--- a/simon.html
+++ b/simon.html
@@ -49,37 +49,22 @@
       </article>
     </main>
     <footer>
-      <div class="credit">
-        <h3>Készítette:</h3>
-        <p>Ivády Barnabás</p>
-        <p>Bíró Viktória</p>
-        <p>Albert Simon</p>
-        <p>András Mira</p>
-      </div>
       <div class="footer-content">
-        <div class="links">
-          <p>Elérhetőségeink:</p>
-          <a href="https://www.instagram.com/szamalkszalezi/">Instagram</a>
-          <a href="https://www.facebook.com/SZAMALK.szalezi.tech.szgi"
-            >Facebook</a
-          >
-          <a href="https://www.youtube.com/@szamalk-szalezitechnikumes4016"
-            >Youtube</a
-          >
-          <a href="https://www.szamalk-szalezi.hu/">Weboldalunk</a>
-          <a href="https://www.tiktok.com/@szamalkszalezi?_t=8XXoVu85TQj&_r=1"
-            >TikTok</a
-          >
+            <div class="credit">
+                <h3>Készítette:</h3>
+                    <p>Ivády Barnabás</p>
+                    <p>Bíró Viktória</p>
+                    <p>Albert Simon</p>
+                    <p>András Mira</p>
+            </div>  
+            <div class="links">         
+                <a href="https://www.instagram.com/szamalkszalezi/"><img src="kepek/footer/Instagram_icon.png" alt="">Instagram</a>
+                <a href="https://www.facebook.com/SZAMALK.szalezi.tech.szgi"><img src="kepek/footer/Facebook_Logo_(2019).png" alt="">Facebook</a>
+                <a href="https://www.youtube.com/@szamalk-szalezitechnikumes4016"><img src="kepek/footer/youtube-icon-free-png.png" alt="">Youtube</a>
+                <a href="https://www.tiktok.com/@szamalkszalezi?_t=8XXoVu85TQj&_r=1"><img src="kepek/footer/tiktok-icon-free-png.png" alt="">TikTok</a>
+                <a href="https://www.szamalk-szalezi.hu/"><img src="kepek/footer/unnamed.jpg" alt=""> Weboldalunk</a>
+            </div>
         </div>
-        <div class="img">
-          <p></p>
-          <img src="kepek/footer/Instagram_icon.png" alt="instagram" />
-          <img src="kepek/footer/Facebook_Logo_(2019).png" alt="facebook" />
-          <img src="kepek/footer/youtube-icon-free-png.png" alt="youtube" />
-          <img src="kepek/footer/unnamed.jpg" alt="weboldalunk" />
-          <img src="kepek/footer/tiktok-icon-free-png.png" alt="tiktok" />
-        </div>
-      </div>
     </footer>
   </body>
 </html>
