--- a/simon.html
+++ b/simon.html
@@ -18,9 +18,9 @@
   </head>
   <body>
     <header>
-      <h1>Torinoi Zarándoklat</h1>
+      <h1>TORINOI ZARÁNDOKLAT</h1>
       <nav>
-        <a href="index.html">kezdőlap</a>
+        <a href="index.html">Kezdőlap</a>
         <a href="barni.html">Margit Mama</a>
         <a href="mira.html">Aviglianai tavak</a>
         <a href="simon.html">Szaléziak Magyarországon</a>
