Remove unused headings in barni.html, mira.html, and simon.html; update text for clarity in index.html; adjust background color, article height, and card image properties in styles.css

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <div class="card">
                         <div class="tartalom">
                             <h2>Miért mentünk Torinóba?</h2>
-                            <p>Osztályunk Torinoba a múlt megismerése miatt indúlt, hogy mégjobban tályékozódottak legyünk Don-Bosco életének különböző helyszíneivel és állomásaival.</p>
+                            <p>Osztályunk Torinoba a múlt megismerése miatt indúlt, hogy mégjobban tályékozódottak legyünk Don-Bosco életének különböző helyszíneivel, pillanataival és állomásaival.</p>
                             <img src="kepek/torino1.png" alt="">
                         </div>
                     </div>
