--- a/mira.html
+++ b/mira.html
@@ -12,62 +12,58 @@
       content="Ivády Barnabás, Bíró Viktória, Albert Simon, András Mira"
     />
     <meta name="description" content="Torinoi Zarándoklat oldal" />
-    <link rel="stylesheet" href="icon.png" />
+    <link rel="icon" href="kepek/footer/icon.png">
     <link rel="stylesheet" href="styles.css" />
-    <title>Torinoi Zarándoklat</title>
+    <title>TORINÓI ZARÁNDOKLAT</title>
   </head>
-  <body>
-    <header>
-      <h1>TORINOI ZARÁNDOKLAT</h1>
-      <nav>
-        <a href="index.html">Kezdőlap</a>
-        <a href="barni.html">Margit Mama</a>
-        <a href="mira.html">Aviglianai tavak</a>
-        <a href="simon.html">Szaléziak Magyarországon</a>
-        <a href="viki.html">Tanárjaink</a>
-      </nav>
+    <body>
+      <header>
+            <h1>TORINOI ZARÁNDOKLAT</h1>
+            <nav>
+                <a href="index.html">Kezdőlap</a>
+                <a href="barni.html">Margit Mama</a>
+                <a href="mira.html">Aviglianai tavak</a>
+                <a href="simon.html">Szaléziak Magyarországon</a>
+                <a href="viki.html">Tanárjaink</a>
+            </nav>
     </header>
-    <main>
-      <article>
-        <section class="cards">
-          <div class="card">
-              <h2></h2>
-            <div class="tartalom">
-              <p></p>
-              <img src="kepek/" alt="" />
+      <main>
+        <article>
+          <section class="cards">
+            <div class="card">
+                <h2></h2>
+              <div class="tartalom">
+                <p>Az Aviglianai tavak (Laghetti di Avigliana) Észak-Olaszországban, a Piemont régióban, a Susa-völgy kapujában találhatók. A két tó – a Nagy-tó és a Kis-tó – a természet és a történelem különleges találkozási pontja.</p>
+                <img src="kepek/avigliana.jpg" alt="" />
+              </div>
             </div>
+            <div class="card">
+                <h2></h2>
+              <div class="tartalom">
+                <p>A környék egy természetvédelmi park része, amely gazdag élővilágával, madárfajaival és nyugodt hangulatával vonzza a kirándulókat. A part mentén gyalogos és kerékpáros ösvények húzódnak, a tavak pedig népszerűek a horgászok és a vízi sportok kedvelői körében is.</p>
+                <img src="kepek/avigliana2.jpg" alt="" />
+              </div>
+            </div>
+          </section>
+        </article>
+      </main>
+      <footer>
+        <div class="footer-content">
+              <div class="credit">
+                  <h3>Készítette:</h3>
+                      <p>Ivády Barnabás</p>
+                      <p>Bíró Viktória</p>
+                      <p>Albert Simon</p>
+                      <p>András Mira</p>
+              </div>  
+              <div class="links">         
+                  <a href="https://www.instagram.com/szamalkszalezi/"><img src="kepek/footer/Instagram_icon.png" alt="">Instagram</a>
+                  <a href="https://www.facebook.com/SZAMALK.szalezi.tech.szgi"><img src="kepek/footer/Facebook_Logo_(2019).png" alt="">Facebook</a>
+                  <a href="https://www.youtube.com/@szamalk-szalezitechnikumes4016"><img src="kepek/footer/youtube-icon-free-png.png" alt="">Youtube</a>
+                  <a href="https://www.tiktok.com/@szamalkszalezi?_t=8XXoVu85TQj&_r=1"><img src="kepek/footer/tiktok-icon-free-png.png" alt="">TikTok</a>
+                  <a href="https://www.szamalk-szalezi.hu/"><img src="kepek/footer/unnamed.jpg" alt=""> Weboldalunk</a>
+              </div>
           </div>
-          <div class="card">
-              <h2></h2>
-            <div class="tartalom">
-              <p></p>
-              <img src="" alt="" />
-            </div>
-            <div class="tartalom">
-              <p></p>
-              <img src="" alt="" />
-            </div>
-          </div>
-        </section>
-      </article>
-    </main>
-    <footer>
-      <div class="footer-content">
-            <div class="credit">
-                <h3>Készítette:</h3>
-                    <p>Ivády Barnabás</p>
-                    <p>Bíró Viktória</p>
-                    <p>Albert Simon</p>
-                    <p>András Mira</p>
-            </div>  
-            <div class="links">         
-                <a href="https://www.instagram.com/szamalkszalezi/"><img src="kepek/footer/Instagram_icon.png" alt="">Instagram</a>
-                <a href="https://www.facebook.com/SZAMALK.szalezi.tech.szgi"><img src="kepek/footer/Facebook_Logo_(2019).png" alt="">Facebook</a>
-                <a href="https://www.youtube.com/@szamalk-szalezitechnikumes4016"><img src="kepek/footer/youtube-icon-free-png.png" alt="">Youtube</a>
-                <a href="https://www.tiktok.com/@szamalkszalezi?_t=8XXoVu85TQj&_r=1"><img src="kepek/footer/tiktok-icon-free-png.png" alt="">TikTok</a>
-                <a href="https://www.szamalk-szalezi.hu/"><img src="kepek/footer/unnamed.jpg" alt=""> Weboldalunk</a>
-            </div>
-        </div>
-    </footer>
-  </body>
+      </footer>
+    </body>
 </html>
