--- a/simon.html
+++ b/simon.html
@@ -12,20 +12,20 @@
       content="Ivády Barnabás, Bíró Viktória, Albert Simon, András Mira"
     />
     <meta name="description" content="Torinoi Zarándoklat oldal" />
-    <link rel="stylesheet" href="icon.png" />
+    <link rel="icon" href="kepek/footer/icon.png">
     <link rel="stylesheet" href="styles.css" />
-    <title>Torinoi Zarándoklat</title>
+    <title>TORINÓI ZARÁNDOKLAT</title>
   </head>
   <body>
     <header>
-      <h1>TORINOI ZARÁNDOKLAT</h1>
-      <nav>
-        <a href="index.html">Kezdőlap</a>
-        <a href="barni.html">Margit Mama</a>
-        <a href="mira.html">Aviglianai tavak</a>
-        <a href="simon.html">Szaléziak Magyarországon</a>
-        <a href="viki.html">Tanárjaink</a>
-      </nav>
+            <h1>TORINOI ZARÁNDOKLAT</h1>
+            <nav>
+                <a href="index.html">Kezdőlap</a>
+                <a href="barni.html">Margit Mama</a>
+                <a href="mira.html">Aviglianai tavak</a>
+                <a href="simon.html">Szaléziak Magyarországon</a>
+                <a href="viki.html">Tanárjaink</a>
+            </nav>
     </header>
     <main>
       <article>
@@ -34,14 +34,14 @@
               <h2>Hit, tanítás, közösség</h2>
             <div class="tartalom">
               <p>A Szalézi rend több mint száz éve működik Magyarországon, hogy fiatalok életét formálja, értékeket közvetítsen és jövőt építsen. Küldetésünk, hogy szeretetteljes, támogató közösséget teremtsünk, ahol minden fiatal esélyt kap a fejlődésre.</p>
-              <img src="kepek/" alt="" />
+              <img src="kepek/c_szo00.jpg" alt="" />
             </div>
           </div>
           <div class="card">
               <h2>Szaléziakról</h2>
             <div class="tartalom">
               <p>A Szaléziak a fiatalok szolgálatára szentelt katolikus szerzetesrend, melyet Szent János Bosco alapított. Magyarországon is számos oktatási intézményt, ifjúsági klubot és szociális programot működtetünk, amelyek segítségével lehetőséget biztosítunk a fejlődésre, tanulásra és közösségi életre.</p>
-              <img src="" alt="" />
+              <img src="kepek/szalezi-1.jpg" alt="" />
             </div>
           </div>
         </section>
