--- a/viki.html
+++ b/viki.html
@@ -12,51 +12,50 @@
       content="Ivády Barnabás, Bíró Viktória, Albert Simon, András Mira"
     />
     <meta name="description" content="Torinoi Zarándoklat oldal" />
-    <link rel="stylesheet" href="icon.png" />
+    <link rel="icon" href="kepek/footer/icon.png">
     <link rel="stylesheet" href="styles.css" />
-    <title>Torinoi Zarándoklat</title>
+    <title>TORINÓI ZARÁNDOKLAT</title>
   </head>
   <body>
     <header>
-      <h1>TORINOI ZARÁNDOKLAT</h1>
-      <nav>
-        <a href="index.html">Kezdőlap</a>
-        <a href="barni.html">Margit Mama</a>
-        <a href="mira.html">Aviglianai tavak</a>
-        <a href="simon.html">Szaléziak Magyarországon</a>
-        <a href="viki.html">Tanárjaink</a>
-      </nav>
+            <h1>TORINOI ZARÁNDOKLAT</h1>
+            <nav>
+                <a href="index.html">Kezdőlap</a>
+                <a href="barni.html">Margit Mama</a>
+                <a href="mira.html">Aviglianai tavak</a>
+                <a href="simon.html">Szaléziak Magyarországon</a>
+                <a href="viki.html">Tanárjaink</a>
+            </nav>
     </header>
     <main>
       <article>
-        <h2>Tanárjaink</h2>
         <section class="cards">
           <div class="card">
             <h2>Rózsás Adrienn</h2>
             <div class="tartalom">
               <p>Rózsás Adrienn a számalkos tizedikeseknek az osztályfőnöke, strukturált, egyértelmű órákat tart. Mindig egyértelmű a feladat, nyugodtan lehet kérdezni és szívesen segít a tanárnő. </p>
-              <img src="kepek/" alt="" />
+              <img src="kepek/rozsas.jpg" alt="" />
             </div>
           </div>
           <div class="card">
             <h2>Cséfalvaj Katalin</h2>
             <div class="tartalom">
               <p>Sok diák kedvence a tanárnő, mindig érthető módon fogalmaz és tanít. Igyekszik személyesen foglalkozni minden diákkal.</p>
-              <img src="kepek/" alt="" />
+              <img src="kepek/cs.jpg" alt="" />
             </div>
           </div>
           <div class="card">
             <h2>Olajos Zsolt</h2>
             <div class="tartalom">
               <p>Olajos Zsolt nagyon érthetően magyaráz, és mindig segít, ha valami nem megy elsőre. Diákként jó érzés, hogy türelmes és valóban azt szeretné, hogy sikerüljön minden.</p>
-              <img src="kepek/" alt="" />
+              <img src="kepek/olajos.jpg" alt="" />
             </div>
           </div>
           <div class="card">
             <h2>Tarczaliné Szabó Ágnes Emília </h2>
             <div class="tartalom">
               <p>Tarczaliné Szabó Ágnes Emília mindig odafigyel ránk, és igyekszik úgy elmagyarázni a tananyagot, hogy mindenki megértse. Diákként nagyon motiváló, hogy támogat és biztat, amikor szükségünk van rá.</p>
-              <img src="" alt="" />
+              <img src="kepek/agnes.jpg" alt="" />
             </div>
           </div>
           <div class="card">
