--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
     <meta name="keywords" content="Torino, zarándoklat, szaléziak, kirándulás">
     <meta name="author" content="Ivády Barnabás, Bíró Viktória, Albert Simon, András Mira">
     <meta name="description" content="Torinoi Zarándoklat oldal">
-    <link rel="stylesheet" href="icon.png">
+    <link rel="icon" href="kepek/footer/icon.png">
     <link rel="stylesheet" href="styles.css">
-    <title>Torinoi Zarándoklat</title>
+    <title>TORINÓI ZARÁNDOKLAT</title>
 </head>
 <body>
     <header>
-        <h1>TORINOI ZARÁNDOKLAT</h1>
-        <nav>
-            <a href="index.html">Kezdőlap</a>
-            <a href="barni.html">Margit Mama</a>
-            <a href="mira.html">Aviglianai tavak</a>
-            <a href="simon.html">Szaléziak Magyarországon</a>
-            <a href="viki.html">Tanárjaink</a>
-        </nav>
+            <h1>TORINOI ZARÁNDOKLAT</h1>
+            <nav>
+                <a href="index.html">Kezdőlap</a>
+                <a href="barni.html">Margit Mama</a>
+                <a href="mira.html">Aviglianai tavak</a>
+                <a href="simon.html">Szaléziak Magyarországon</a>
+                <a href="viki.html">Tanárjaink</a>
+            </nav>
     </header>
         <main>
             <article>
@@ -39,9 +39,9 @@
                         </div>
                     </div>                
                 </section>
-                    <h2>Vélemények a kirándulásról:</h2>
                 <section>
                     <div class="comments">
+                        <h2>Vélemények a kirándulásról:</h2>
                         <div class="comment_card">
                             <h3>A.S.</h3>
                             <p>Jól éreztem magam.</p>
