--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Torinoi Zarándoklat oldal">
     <link rel="icon" href="kepek/footer/icon.png">
     <link rel="stylesheet" href="styles.css">
-    <title>TORINÓI ZARÁNDOKLAT</title>
+    <title>TORINOI ZARÁNDOKLAT</title>
 </head>
 <body>
     <header>
@@ -26,16 +26,16 @@
                 <section class="cards">
                     <div class="card">
                         <div class="tartalom">
-                            <h2>Miért mentünk Torinóba?</h2>
-                            <p>Osztályunk Torinoba a múlt megismerése miatt indúlt, hogy mégjobban tályékozódottak legyünk Don-Bosco életének különböző helyszíneivel, pillanataival és állomásaival.</p>
-                            <img src="kepek/torino1.png" alt="">
+                            <h2>Miért mentünk Torinoba?</h2>
+                            <div class="kep"><img src="kepek/torino1.png" alt=""></div>
+                            <p>Osztályunk Torinoba a múlt megismerése miatt indult, hogy mégjobban tájékozódottak legyünk Don-Bosco életének különböző helyszíneivel, pillanataival és állomásaival.</p>
                         </div>
                     </div>
                     <div class="card">
                         <div class="tartalom">
                             <h2>Kik rendezték a kirándulást?</h2>
+                            <div class="kep"><img src="kepek/photo-1502113130129-259236d6fabd.jpg" alt=""></div>
                             <p>Támogatók:Kovács Sándor, Szarka Adrienn, Halász József igazgató, Koblencz Máté igazgató helyettes, a vezetőség összes tagja, Rózsás Adrienn osztályfőnök, Tarczaliné Szabó Ágnes ofő helyettes, Kirner Gábor testvér.</p>
-                            <img src="kepek/photo-1502113130129-259236d6fabd.jpg" alt="">
                         </div>
                     </div>                
                 </section>
@@ -71,7 +71,7 @@
             <div class="credit">
                 <h3>Készítette:</h3>
                     <p>Ivády Barnabás</p>
-                    <p>Bíró Viktória</p>
+                    <p>Biró Viktória</p>
                     <p>Albert Simon</p>
                     <p>András Mira</p>
             </div>  
