--- a/mira.html
+++ b/mira.html
@@ -31,17 +31,17 @@
         <article>
           <section class="cards">
             <div class="card">
-                <h2></h2>
               <div class="tartalom">
+                <h2>Aviglianai tavak</h2>
+                <div class="kep"><img src="kepek/avigliana.jpg" alt="" /></div>
                 <p>Az Aviglianai tavak (Laghetti di Avigliana) Észak-Olaszországban, a Piemont régióban, a Susa-völgy kapujában találhatók. A két tó – a Nagy-tó és a Kis-tó – a természet és a történelem különleges találkozási pontja.</p>
-                <img src="kepek/avigliana.jpg" alt="" />
               </div>
             </div>
             <div class="card">
-                <h2></h2>
               <div class="tartalom">
+                <h2>Aviglianai tavak</h2>
+                <div class="kep"><img src="kepek/avigliana2.jpg" alt="" /></div>
                 <p>A környék egy természetvédelmi park része, amely gazdag élővilágával, madárfajaival és nyugodt hangulatával vonzza a kirándulókat. A part mentén gyalogos és kerékpáros ösvények húzódnak, a tavak pedig népszerűek a horgászok és a vízi sportok kedvelői körében is.</p>
-                <img src="kepek/avigliana2.jpg" alt="" />
               </div>
             </div>
           </section>
@@ -52,7 +52,7 @@
               <div class="credit">
                   <h3>Készítette:</h3>
                       <p>Ivády Barnabás</p>
-                      <p>Bíró Viktória</p>
+                      <p>Biró Viktória</p>
                       <p>Albert Simon</p>
                       <p>András Mira</p>
               </div>  
