--- a/simon.html
+++ b/simon.html
@@ -31,17 +31,17 @@
       <article>
         <section class="cards">
           <div class="card">
-              <h2>Hit, tanítás, közösség</h2>
             <div class="tartalom">
+              <h2>Hit, tanítás, közösség</h2>
+              <div class="kep"><img src="kepek/c_szo00.jpg" alt="" /></div>
               <p>A Szalézi rend több mint száz éve működik Magyarországon, hogy fiatalok életét formálja, értékeket közvetítsen és jövőt építsen. Küldetésünk, hogy szeretetteljes, támogató közösséget teremtsünk, ahol minden fiatal esélyt kap a fejlődésre.</p>
-              <img src="kepek/c_szo00.jpg" alt="" />
             </div>
           </div>
           <div class="card">
-              <h2>Szaléziakról</h2>
             <div class="tartalom">
+              <h2>Hit, tanítás, közösség</h2>
+              <div class="kep"><img src="kepek/szalezi-1.jpg" alt="" /></div>
               <p>A Szaléziak a fiatalok szolgálatára szentelt katolikus szerzetesrend, melyet Szent János Bosco alapított. Magyarországon is számos oktatási intézményt, ifjúsági klubot és szociális programot működtetünk, amelyek segítségével lehetőséget biztosítunk a fejlődésre, tanulásra és közösségi életre.</p>
-              <img src="kepek/szalezi-1.jpg" alt="" />
             </div>
           </div>
         </section>
@@ -52,7 +52,7 @@
             <div class="credit">
                 <h3>Készítette:</h3>
                     <p>Ivády Barnabás</p>
-                    <p>Bíró Viktória</p>
+                    <p>Biró Viktória</p>
                     <p>Albert Simon</p>
                     <p>András Mira</p>
             </div>  
