--- a/viki.html
+++ b/viki.html
@@ -33,12 +33,12 @@
           <div class="card">
             <h2>Rózsás Adrienn</h2>
             <div class="tartalom">
-              <p>Rózsás Adrienn a számalkos tizedikeseknek az osztályfőnöke, strukturált, egyértelmű órákat tart. Mindig egyértelmű a feladat, nyugodtan lehet kérdezni és szívesen segít a tanárnő. </p>
+              <p>Rózsás Adrienn a számalkos tizedikeseknek az osztályfőnöke, struktúrált, egyértelmű órákat tart. Mindig egyértelmű a feladat, nyugodtan lehet kérdezni és szívesen segít a tanárnő. </p>
               <img src="kepek/rozsas.jpg" alt="" />
             </div>
           </div>
           <div class="card">
-            <h2>Cséfalvaj Katalin</h2>
+            <h2>Cséfalvay Katalin</h2>
             <div class="tartalom">
               <p>Sok diák kedvence a tanárnő, mindig érthető módon fogalmaz és tanít. Igyekszik személyesen foglalkozni minden diákkal.</p>
               <img src="kepek/cs.jpg" alt="" />
