--- a/viki.html
+++ b/viki.html
@@ -147,13 +147,28 @@
                     <p>Albert Simon</p>
                     <p>András Mira</p>
             </div>  
-            <div class="links">         
-                <a href="https://www.instagram.com/szamalkszalezi/"><img src="kepek/footer/Instagram_icon.png" alt="">Instagram</a>
-                <a href="https://www.facebook.com/SZAMALK.szalezi.tech.szgi"><img src="kepek/footer/Facebook_Logo_(2019).png" alt="">Facebook</a>
-                <a href="https://www.youtube.com/@szamalk-szalezitechnikumes4016"><img src="kepek/footer/youtube-icon-free-png.png" alt="">Youtube</a>
-                <a href="https://www.tiktok.com/@szamalkszalezi?_t=8XXoVu85TQj&_r=1"><img src="kepek/footer/tiktok-icon-free-png.png" alt="">TikTok</a>
-                <a href="https://www.szamalk-szalezi.hu/"><img src="kepek/footer/unnamed.jpg" alt=""> Weboldalunk</a>
-            </div>
+            <div class="links">
+                <div class="sponsor">
+                    <img src="kepek/footer/Instagram_icon.png" alt="">
+                    <a href="https://www.instagram.com/szamalkszalezi/">Instagram</a>
+                </div>
+                <div class="sponsor">
+                    <img src="kepek/footer/Facebook_Logo_(2019).png" alt="">
+                    <a href="https://www.facebook.com/SZAMALK.szalezi.tech.szgi">Facebook</a>
+                </div>
+                <div class="sponsor">
+                     <img src="kepek/footer/youtube-icon-free-png.png" alt="">
+                    <a href="https://www.youtube.com/@szamalk-szalezitechnikumes4016">Youtube</a>
+                </div>
+                <div class="sponsor">
+                    <img src="kepek/footer/tiktok-icon-free-png.png" alt="">
+                    <a href="https://www.tiktok.com/@szamalkszalezi?_t=8XXoVu85TQj&_r=1">TikTok</a>
+                </div>
+                <div class="sponsor">
+                    <img src="kepek/footer/unnamed.jpg" alt="">
+                    <a href="https://www.szamalk-szalezi.hu/">Weboldalunk</a> 
+                </div>
+            </div> 
         </div>
     </footer>
   </body>
